--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^3.0.0",
+		"@supabase/supabase-js": "^1.35.4",
+		"cookie": "^0.5.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^1.35.4",
-		"cookie": "^0.5.0"
 	}
 }
